finalizando as melhorias na estrutura inicial do sistema de arquivos e adicionando mais alguns comandos